--- a/styles/styles.css
+++ b/styles/styles.css
@@ -87,6 +87,25 @@ img {
   color: var(--additional-dark-color);
 }
 
+.nav-link::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 4px;
+  color: blueviolet;
+  background-color: blueviolet;
+  margin-bottom: -4px;
+}
+
+.nav-item {
+  position: relative;
+}
+
+.nav-link:hover .nav-link::after {
+}
+
 /* hero section */
 
 .hero-container {
@@ -296,6 +315,13 @@ img {
   align-items: flex-start;
 }
 
+.price-item {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  height: 584px;
+}
+
 .price-description {
   max-width: 426px;
   font-weight: 400;
@@ -324,6 +350,7 @@ img {
   gap: 21.17px;
   justify-content: center;
   align-items: center;
+  margin-top: auto;
 }
 
 .price {
