--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,6 +62,12 @@ img {
   cursor: pointer;
 }
 
+.button-header:focus,
+.button-header:hover {
+  background-color: darkmagenta;
+  color: #ffffff;
+}
+
 .site-nav {
   display: flex;
   gap: 50px;
@@ -89,21 +95,31 @@ img {
 
 .nav-link::after {
   position: absolute;
-  bottom: 0;
+  bottom: 4px;
   left: 0;
+  transform: scaleX(0);
   content: "";
   width: 100%;
   height: 4px;
   color: blueviolet;
   background-color: blueviolet;
-  margin-bottom: -4px;
+  border-radius: 2px;
 }
 
 .nav-item {
   position: relative;
 }
 
-.nav-link:hover .nav-link::after {
+.nav-link:hover:after,
+.nav-link:focus:after,
+.nav-link.current {
+  transform: scaleX(1);
+}
+
+.nav-link:hover,
+.nav-link:focus,
+.nav-link.current {
+  color: darkmagenta;
 }
 
 /* hero section */
